:sparkles: [FEAT] Send Delivery Collect 수정